--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kapott</groupId>
   <artifactId>hbci4java</artifactId>
-  <version>2.5.13-SNAPSHOT</version>
+  <version>2.5.13-procilon-1</version>
   <packaging>jar</packaging>
   <name>hbci4java</name>
   <description>HBCI4java</description>
